--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,19 @@
 /*!
  * Author: Akash Bhadange
  */
+@import '~bootstrap/scss/_functions.scss';
+@import '~bootstrap/scss/_variables.scss';
+@import '~bootstrap/scss/_mixins.scss';
+@import '~bootstrap/scss/_buttons.scss';
+@import '~bootstrap/scss/bootstrap-grid.scss';
+
+* {
+  box-sizing: border-box;
+}
+
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   background-color: #f2f2f2;
   font-size: 16px;
   color: #222;
@@ -19,7 +29,7 @@ a {
 section {
   width: 100%;
 }
-a:hover, a:focus, a:active {
+a, a:hover, a:focus, a:active {
   text-decoration: none;
   outline: none;
 }
@@ -45,13 +55,23 @@ img {
 
 /* Hero Section */
 header.hero {
-  background: url(assets/hero-bg.jpg) no-repeat center center fixed;
+  position: relative;
+  background: url(assets/me.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   color: #fff;
-  padding-bottom: 80px;
+  min-height: 100vh;
+
+  &:before {
+    content: ' ';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, #000, transparent);
+    opacity: .4;
+  }
 }
 
 header.hero .hero-text {
@@ -75,7 +95,7 @@ a.menu:hover {
 }
 header.hero h1 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 4.5em;
+  font-size: 3.5em;
   font-weight: 600;
   line-height: 1.4em;
 }
@@ -151,12 +171,12 @@ h1.heading.pink:after {
 
 .swiper-container {
   width: 100%;
-  height: 100%;
   padding: 4em 1em;
 }
 .swiper-slide {
   font-size: 18px;
-  background: #fff;
+  padding: 0 20px;
+  height: auto;
 }
 
 .client-box {
@@ -169,6 +189,8 @@ h1.heading.pink:after {
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
+  box-sizing: border-box;
+  height: 100%;
 }
 .client-box .client-logo {
   max-height: 120px;
@@ -210,11 +232,9 @@ h1.heading.pink:after {
 }
 .swiper-button-next, .swiper-container-rtl .swiper-button-prev {
   background-image: url(assets/arrow-right.png);
-  right: -40px;
 }
 .swiper-button-prev, .swiper-container-rtl .swiper-button-next {
   background-image: url(assets/arrow-left.png);
-  left: -40px;
 }
 
 
@@ -544,6 +564,35 @@ ul.main-nav.show-it {
   }
 }
 
+// Icons
+
+.icon--header {
+  color: #fff;
+  opacity: .85;
+  font-size: 30px;
+}
+
+
+// Sections
+
+.section--about {
+  text-align: center;
+  transform: translateY(-80px);
+  padding: 5em 3em;
+  background-color: #fff;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.15);
+}
+
+.section-about__title {
+  font-size: 2em;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.section-about__text {
+  max-width: 35rem;
+  font-family: 'Montserrat', sans-serif;
+  margin: 1em auto;
+}
 
 
 
