--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,13 @@
 /*!
  * Author: Akash Bhadange
  */
-@import '~bootstrap/scss/_functions.scss';
-@import '~bootstrap/scss/_variables.scss';
-@import '~bootstrap/scss/_mixins.scss';
-@import '~bootstrap/scss/_buttons.scss';
-@import '~bootstrap/scss/utilities/_text.scss';
-@import '~bootstrap/scss/bootstrap-grid.scss';
+@import '~bootstrap/scss/_functions';
+@import '~bootstrap/scss/_variables';
+@import '~bootstrap/scss/_mixins';
+@import '~bootstrap/scss/_buttons';
+@import '~bootstrap/scss/utilities/_text';
+@import '~bootstrap/scss/bootstrap-grid';
+@import '~bootstrap/scss/custom-forms';
 
 * {
   box-sizing: border-box;
@@ -594,6 +595,14 @@ ul.main-nav.show-it {
   max-width: 35rem;
   font-family: 'Montserrat', sans-serif;
   margin: 1em auto;
+}
+
+// Modules
+
+.language-select__container {
+  position: absolute;
+  top: 24px;
+  right: 24px;
 }
 
 
