--- a/src/App.scss
+++ b/src/App.scss
@@ -59,9 +59,6 @@ img {
 header.hero {
   position: relative;
   background: url(assets/me.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
   color: #fff;
   min-height: 100vh;
@@ -75,6 +72,12 @@ header.hero {
     opacity: .4;
     left: 0;
     top: 0;
+  }
+
+  @media screen and (max-width: 768px) {
+    background: url(assets/me.jpg) no-repeat center center;
+    background-size: cover;
+
   }
 }
 
@@ -603,6 +606,7 @@ ul.main-nav.show-it {
   position: absolute;
   top: 24px;
   right: 24px;
+  z-index: 1;
 }
 
 
